--- a/Attendence_App/src/app/tab1/tab1.page.html
+++ b/Attendence_App/src/app/tab1/tab1.page.html
@@ -13,27 +13,27 @@
     
     <img src="../../assets/logo.png">
    
-    <ion-input placeholder="Username" style="font-size: 20px;color: black;" value=""></ion-input>
+    <ion-input  [(ngModel)]="logindata.username" type = "text" placeholder="Username" style="font-size: 20px;color: black;" value=""></ion-input>
 
-    <ion-input placeholder="email" style="font-size: 20px;"  value = "" ></ion-input>
+    <ion-input  [(ngModel)]="logindata.email" type = "text" placeholder="email" style="font-size: 20px;"  value = "" ></ion-input>
      
-    <ion-input placeholder="Password"  style="font-size: 20px;" value=""></ion-input>
+    <ion-input  [(ngModel)]="logindata.password" type = "text" placeholder="Password"  style="font-size: 20px;" value=""></ion-input>
 
-    <ion-input  placeholder="Confirm Password"  style="font-size: 20px;" value=""></ion-input>
+    <ion-input  [(ngModel)]="logindata.C_password" type = "text" placeholder="Confirm Password"  style="font-size: 20px;" value=""></ion-input>
 
 
 
    
-    <ion-input  style="font-size: 20px;"placeholder="Address Line 1"></ion-input>
-    <ion-input style="font-size: 20px;" placeholder="Address Line 2"></ion-input >
-    <ion-input  style="font-size: 20px;"placeholder="City"></ion-input>
-    <ion-input style="font-size: 20px;" placeholder="Province"></ion-input>
-    <ion-input style="font-size: 20px;" placeholder="PostalCode"></ion-input>
+    
+    <ion-input  [(ngModel)]="logindata.address" type = "text" style="font-size: 20px;" placeholder="Address"></ion-input >
+    <ion-input  [(ngModel)]="logindata.city" type = "text" style="font-size: 20px;"placeholder="City"></ion-input>
+    <ion-input  [(ngModel)]="logindata.province" type = "text" style="font-size: 20px;" placeholder="Province"></ion-input>
+    <ion-input  [(ngModel)]="logindata.postalCode" type = "text" style="font-size: 20px;" placeholder="PostalCode"></ion-input>  
   
 
 </ion-list>
  
-<ion-button  shape="round" size="30px" color="light" >
+<ion-button (click)="loginClick()"  shape="round" size="30px" color="light" >
   <ion-icon slot="icon-only" name="log-in" ></ion-icon>Log In</ion-button>
 
 <ion-button shape="round" size="30px" color="light" >
