--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -6,4 +6,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-button (click)="loginClick()"  shape="round" size="30px" color="light" >
+    <ion-icon slot="icon-only" name="log-in" ></ion-icon>Log In</ion-button>
+
+</ion-content>
