--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -1,13 +1,20 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
+    <ion-title style=" font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: green;font-size: xx-large;font-weight: bolder;">      My Attendence</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button (click)="loginClick()"  shape="round" size="30px" color="light" >
-    <ion-icon slot="icon-only" name="log-in" ></ion-icon>Log In</ion-button>
+  <ion-list inset>
 
+    <img src="../../assets/logo.png">
+    <ion-input  [(ngModel)]="userName" type = "text" style="font-size: 20px;" placeholder="First Name"></ion-input >
+    <ion-input  [(ngModel)]="password" type = "text" style="font-size: 20px;"placeholder="Last Name"></ion-input>
+
+  </ion-list>
+  <ion-button (click)="loginClick()"  shape="round" size="30px" color="light" >
+  <ion-icon slot="icon-only" name="log-in" ></ion-icon>Log In</ion-button>
+
+
+ 
 </ion-content>
