--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -8,8 +8,8 @@
 
   <ion-list inset>
     <img src="../../assets/logo.png">
-    <ion-input  [(ngModel)]="userName" type = "text" style="font-size: 20px;" placeholder="First Name"></ion-input >
-    <ion-input  [(ngModel)]="password" type = "text" style="font-size: 20px;"placeholder="Last Name"></ion-input>
+    <ion-input  [(ngModel)]="userName" type = "text" style="font-size: 20px;" placeholder="userName"></ion-input >
+    <ion-input  [(ngModel)]="password" type = "text" style="font-size: 20px;"placeholder="Password"></ion-input>
   </ion-list>
 
   <ion-row>
