--- a/Attendence_App/src/app/tab1/tab1.page.html
+++ b/Attendence_App/src/app/tab1/tab1.page.html
@@ -26,7 +26,7 @@
 
     <ion-item style="right: 9px;">
       <ion-label style="font-size: 20px;">SignUp as Instructor</ion-label>
-      <ion-checkbox style="font-size: 20px;" color="light"  [(ngModel)]="logindata.IsInstructor"></ion-checkbox>
+      <ion-checkbox style="font-size: 20px;" color="light"  [(ngModel)]="IsInstructor"></ion-checkbox>
     </ion-item>
   
 </ion-list>
