--- a/Attendence_App/src/app/tab3/tab3.page.html
+++ b/Attendence_App/src/app/tab3/tab3.page.html
@@ -1,9 +1,28 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
+    <ion-title style=" font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: green;font-size: xx-large;font-weight: bolder;">      My Attendence</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  
+      <ion-list>
+        <ion-item>
+          <ion-label>Welcome on class </ion-label>
+          <ion-input [(ngModel)]="firstName" color="success" readonly style="font-size: 20px;" ></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-input  [(ngModel)]="className" type = "text" style="font-size: 20px;" placeholder="Name of Class"></ion-input >
+        </ion-item>
+
+        <ion-button  (click)="addClassClick()" shape="round" style="margin-top: 10px;"  size="30px" color="light" >
+          <ion-icon slot="icon-only" name="add"></ion-icon>Add new Class</ion-button>
+      
+
+        <ion-button  shape="round" style="margin-top: 10px;"  size="30px" color="light" >
+          <ion-icon slot="icon-only" name="person-add"></ion-icon>Register</ion-button>
+       </ion-list>
+
+
+</ion-content>
