--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -12,7 +12,8 @@
    
     
     <div class="segment">
-      <h1 style="color: darkgreen;">Log in</h1>
+      <h1 style="font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+      'Trebuchet MS', sans-serif;color: green">Log in</h1>
     </div>
 
   <div class="form">
