Barcode Generate and send to server , done

--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -4,13 +4,47 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen class="ion-padding" scroll-y="false">
+  <!-- <ion-slides>
+
+    <ion-slide>
+      <div class="slide">
+        <h2>Welcome</h2>
+        <p  style="font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+        'Trebuchet MS', sans-serif;color: green" >Hi!! My name is Karan</p>
+      </div>
+    </ion-slide>
+
+    <ion-slide>
+      <div class="slide">
+        <h2>Welcome</h2>
+        <p  style="font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+        'Trebuchet MS', sans-serif;color: green" >Hi!! My name is Karan</p>
+      </div>
+    </ion-slide>
+
+
+    <ion-slide>
+      <div class="slide">
+        <h2>Welcome</h2>
+        <p  style="font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
+        'Trebuchet MS', sans-serif;color: green" >Hi!! My name is Karan</p>
+      </div>
+    </ion-slide>
+
+
+    <ion-slide>
+      <h2>Ready to Go?</h2>
+      <ion-button fill="clear">Continue <ion-icon slot="end" name="arrow-forward"></ion-icon></ion-button>
+    </ion-slide>
+
+  </ion-slides> -->
+
+  
 
   <ion-list inset>
 
-    <img src="../../assets/logo.png">
    
-    
     <div class="segment">
       <h1 style="font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri,
       'Trebuchet MS', sans-serif;color: green">Log in</h1>
@@ -47,4 +81,6 @@
 
 </div>
   </ion-list>
+
+ 
 </ion-content>
