--- a/Attendence_App/src/app/barcode-page/barcode-page.page.html
+++ b/Attendence_App/src/app/barcode-page/barcode-page.page.html
@@ -1,9 +1,38 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>barcodePage</ion-title>
+    <ion-title style=" font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: green;font-size: xx-large;font-weight: bolder;">      My Attendence</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen class="ion-padding" scroll-y="false">
+
+  
+  <div class="form">
+
+    <ion-row>
+      <ion-col>
+  <label>
+    <input type="email"  style="color: black; width: 200px;" [(ngModel)]="student_email" placeholder="Enter email"/>
+  </label>
+</ion-col>
+<ion-col>
+  <button class="yellow" style="width: 60px;" (click)="addStudent()"  type="button"> <ion-icon name="add"></ion-icon></button>
+</ion-col>
+</ion-row>
+  
+      <button class="red" (click)="CraeteBarcode()" style=" margin-top: 10px;" type="button">Start Taking Attendence</button>
+    
+
+    
+        <ion-card class="card" style="height: 250px; width: 250px; margin-top: 40px;" *ngIf="createdCode">
+          <ngx-qrcode [qrc-value]="createdCode">
+          </ngx-qrcode>
+        </ion-card>      
+    </div> 
+  
+
+
+
+ 
 
 </ion-content>
