--- a/Attendence_App/src/app/barcode-page/barcode-page.page.scss
+++ b/Attendence_App/src/app/barcode-page/barcode-page.page.scss
@@ -31,6 +31,12 @@ div, p {
   text-align: center;
 }
 
+
+.segmentList {
+  padding: $ruler*1 0;
+  text-align: center;
+}
+
 button, input {
   border: 0;
   outline: 0;
