--- a/Attendence_App/src/app/tab1/tab1.page.html
+++ b/Attendence_App/src/app/tab1/tab1.page.html
@@ -6,7 +6,7 @@
   </ion-header>
 
 
-<ion-content>
+<ion-content fullscreen class="ion-padding">
 
    <ion-list inset>
 
@@ -61,6 +61,8 @@
     </ion-col>
 
 </ion-row>
+
+
 </div>
 </ion-list>
 
