--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen class="ion-padding" scroll-y="false">
+<ion-content fullscreen class="ion-padding">
   <!-- <ion-slides>
 
     <ion-slide>
