--- a/Attendence_App/src/app/student-scan/student-scan.page.html
+++ b/Attendence_App/src/app/student-scan/student-scan.page.html
@@ -10,7 +10,7 @@
     'Trebuchet MS', sans-serif;color: green" >{{className}}</label>
 
 <label >
-  <input type="number" style="color: black;"  [(ngModel)]=" scannedData"  placeholder="enter barcode data">
+  <input type="text" style="color: black;"  [(ngModel)]=" scannedData"  placeholder="enter barcode data">
 </label>
   </div>
 
