--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -65,7 +65,9 @@
       <ion-checkbox style="font-size: 20px;" color="light"  [(ngModel)]="IsInstructor"></ion-checkbox>
     </ion-item>
 
-  
+    <div class="segment">
+      <label style="font-size: 15px; color: red;" >{{errorMessege}}</label>
+    </div>
 
    <ion-row>
      <ion-col>
