--- a/Attendence_App/src/app/tab2/tab2.page.html
+++ b/Attendence_App/src/app/tab2/tab2.page.html
@@ -1,7 +1,5 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title style=" font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: green;font-size: xx-large;font-weight: bolder;">      My Attendence</ion-title>
-  </ion-toolbar>
+  
 </ion-header>
 
 <ion-content fullscreen class="ion-padding">
@@ -66,7 +64,7 @@
     </ion-item>
 
     <div class="segment">
-      <label style="font-size: 15px; color: red;" >{{errorMessege}}</label>
+      <p style="font-size: 15px; color: red;" >{{errorMessege}}</p>
     </div>
 
    <ion-row>
