--- a/Attendence_App/src/app/tabs/tabs.page.html
+++ b/Attendence_App/src/app/tabs/tabs.page.html
@@ -15,14 +15,17 @@
  
   <ion-menu type="overlay" content-id="mycontent">
       <ion-header style="font-size: large;">
-        Settings
+    
        <ion-toolbar>
          
         <ion-list inset>
              <ion-item>
-                 <ion-label>Dark Mode</ion-label>
-                 <ion-toggle slot="start" name="blackberry"  color="dark" checked = "false"></ion-toggle>
+                 <ion-label>My Attendence</ion-label>
              </ion-item>
+                 <ion-item>
+                  <ion-label>My Attendence</ion-label>
+              </ion-item>
+            
         </ion-list>
  
     </ion-toolbar>
